--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,11 +9,28 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_native_splash: ^2.3.11
+  google_fonts: ^6.1.0
+
+flutter_native_splash:
+  color: '#f7f6f1'
+  color_dark: '#272727'
+  image: assets/logo/logo1.png
+  image_dark: assets/logo/logo1.png
+
+  android_12:
+    image: assets/logo/logo1.png
+    icon_background_color: '#f7f6f1'
+    image_dark: assets/logo/logo1.png
+    icon_background_color_dark: '#272727'
 
 dev_dependencies:
+  flutter_lints: ^2.0.0
   flutter_test:
     sdk: flutter
-  flutter_lints: ^2.0.0
 
 flutter:
   uses-material-design: true
+  assets:
+    - assets/logo/logo1.png
+    - assets/images/icon.png
